--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "node-fetch": "^3.3.2"
   }
 }
